--- a/symfony_fw/templates/include/pageComment.html.twig
+++ b/symfony_fw/templates/include/pageComment.html.twig
@@ -25,7 +25,7 @@
                 
                 {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
                 
-                <button class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg button_reset" type="button">
+                <button class="mdc-button mdc-button--dense mdc-button--raised button_warning button_reset" type="button">
                     {% trans %}pageCommentType_3{% endtrans %}
                 </button>
             </form>
