--- a/symfony_fw/templates/include/table_and_pagination.html.twig
+++ b/symfony_fw/templates/include/table_and_pagination.html.twig
@@ -3,7 +3,7 @@
         <button class="mdc-button mdc-button--dense mdc-button--raised refresh" type="button">
             {% trans %}tableAndPagination_1{% endtrans %}
         </button>
-        <button class="mdc-button mdc-button--dense mdc-button--raised delete_all mdc-theme--secondary-bg" type="button">
+        <button class="mdc-button mdc-button--dense mdc-button--raised delete_all button_warning" type="button">
             {% trans %}tableAndPagination_2{% endtrans %}
         </button>
     </div>
