--- a/symfony_fw/templates/layout/layout_form_materialDesign.html.twig
+++ b/symfony_fw/templates/layout/layout_form_materialDesign.html.twig
@@ -107,7 +107,7 @@
     {% endif %}
     
     {% if resettable is defined %}
-        <button class="mdc-button mdc-button--dense mdc-button--raised button_password" type="button">
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_password button_warning" type="button">
             <span>{% trans %}layout_1{% endtrans %}</span>
         </button>
     {% endif %}
