--- a/symfony_fw/templates/render/control_panel/payment_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/payment_delete.html.twig
@@ -1,4 +1,4 @@
 <p>{% trans %}paymentDelete_1{% endtrans %}</p>
-<button id="cp_payment_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+<button id="cp_payment_delete" class="mdc-button mdc-button--dense mdc-button--raised button_warning" type="button">
     {% trans %}paymentDelete_2{% endtrans %}
 </button>
