--- a/symfony_fw/templates/render/my_page/myPage_payment_delete.html.twig
+++ b/symfony_fw/templates/render/my_page/myPage_payment_delete.html.twig
@@ -1,2 +1,2 @@
 <p>{% trans %}myPagePaymentDelete_1{% endtrans %}</p>
-<button id="myPage_payment_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}myPagePaymentDelete_2{% endtrans %}</button>
+<button id="myPage_payment_delete" class="mdc-button mdc-button--dense mdc-button--raised button_warning" type="button">{% trans %}myPagePaymentDelete_2{% endtrans %}</button>
