--- a/symfony_fw/public/scss/system/helper.scss
+++ b/symfony_fw/public/scss/system/helper.scss
@@ -7,7 +7,7 @@ $mdc-theme-on-primary: #ffffff;
 $mdc-theme-secondary: #d50000;
 $mdc-theme-on-secondary: #ffffff;
 $mdc-theme-background: #ffffff;
-$mdc-theme-surface: #63a4ff;
+$mdc-theme-surface: #7c92b3;
 $mdc-theme-on-surface: #000000;
 
 $mdc-theme-text-primary-on-background: rgba(0, 0, 0, 0.87);
@@ -21,10 +21,63 @@ $mdc-theme-text-hint-on-light: rgba(0, 0, 0, 0.38);
 $mdc-theme-text-disabled-on-light: rgba(0, 0, 0, 0.38);
 $mdc-theme-text-icon-on-light: rgba(0, 0, 0, 0.38);
 $mdc-theme-text-primary-on-dark: #ffffff;
-$mdc-theme-text-secondary-on-dark: hsla(0, 0, 100, 0.7);
-$mdc-theme-text-hint-on-dark: hsla(0, 0, 100, 0.5);
-$mdc-theme-text-disabled-on-dark: hsla(0, 0, 100, 0.5);
-$mdc-theme-text-icon-on-dark: hsla(0, 0, 100, 0.5);
+$mdc-theme-text-secondary-on-dark: rgba(0, 0, 100, 0.7);
+$mdc-theme-text-hint-on-dark: rgba(0, 0, 100, 0.5);
+$mdc-theme-text-disabled-on-dark: rgba(0, 0, 100, 0.5);
+$mdc-theme-text-icon-on-dark: rgba(0, 0, 100, 0.5);
+
+$mdcInputLabelBackgroundColor: #ffffff;
+$mdcInputLabelTextColor: #000000;
+
+$mdcListBorderColor: rgba(38, 38, 38, 0.5);
+
+$loaderColor1: #008744;
+$loaderColor2: #ffa700;
+$loaderColor3: #d66020;
+$loaderColor4: #ff0000;
+$loaderBackBackgroundColor: #000000;
+$loaderBackgroundColor: #ffffff;
+$loaderBorderColor: #000000;
+$loaderWidth: 50px;
+
+$menuRootBottom: 8px;
+$menuRootBackgroundImage: url("../../images/templates/basic/16-9.jpg");
+$menuRootMainTargetBackgroundColor: #616d79;
+$menuRootMainTargetBorderColor: #000000;
+$menuRootParentIconColor: #ffffff;
+$menuRootParentContentTop: 32px;
+$menuRootParentContentBackgroundColor: #616d79;
+$menuRootTargetPadding: 10px 15px;
+$menuRootTargetSpanTextColor: #ffffff;
+$menuRootTargetHoverBackgroundColor: #49525a;
+$menuRootTargetParentBorderColor: #00148b;
+
+$tableAndPaginationBorderColor: #000000;
+$tableAndPaginationAlternateBackgroundColor1: #bdaaaa;
+$tableAndPaginationAlternateTextColor1: #000000;
+$tableAndPaginationAlternateBackgroundColor2: #8b7e7e;
+$tableAndPaginationAlternateTextColor2: #000000;
+
+$moduleBorderColor: #dee2e6;
+$moduleBackgroundColor: #ececec;
+$moduleTextColor: #000000;
+
+$codeBackgroundColor: #b6b6b6;
+$codeTextColor: #000000;
+
+$consoleBackgroundColor: #1c1c1c;
+$consoleTextColor: #ffffff;
+
+$warningTextColor: #ff0000;
+$warningButtonTextColor: #ffffff;
+$warningButtonBackgroundColor: #ff0000;
+$warningIconColor: #ffffff;
+$warningIconBackgroundColor: #ff0000;
+
+$boxShadowDown: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+$boxShadowUp: 0 -3px 1px -2px rgba(0, 0, 0, 0.2), 0 -2px 2px 0 rgba(0, 0, 0, 0.14), 0 -1px 5px 0 rgba(0, 0, 0, 0.12);
+
+$footerHeight: 80px;
 
 $mdc-layout-grid-margin-desktop: 24px;
 $mdc-layout-grid-gutter-desktop: 24px;
@@ -35,54 +88,6 @@ $mdc-layout-grid-column-width-tablet: 72px;
 $mdc-layout-grid-margin-phone: 16px;
 $mdc-layout-grid-gutter-phone: 16px;
 $mdc-layout-grid-column-width-phone: 72px;
-
-$mdcInputLabelBackgroundColor: #ffffff;
-$mdcInputLabelTextColor: #000000;
-
-$mdcListBorderColor: rgba(0, 0, 0, 0.12);
-
-$loaderColor1: #008744;
-$loaderColor2: #0057e7;
-$loaderColor3: #d62d20;
-$loaderColor4: #ffa700;
-$loaderBackBackgroundColor: #000000;
-$loaderBackgroundColor: #ffffff;
-$loaderBorderColor: #000000;
-$loaderWidth: 50px;
-
-$menuRootBottom: 8px;
-$menuRootBackgroundImage: url("../../images/templates/basic/16-9.jpg");
-$menuRootMainTargetBackgroundColor: #1976d2;
-$menuRootMainTargetBorderColor: #000000;
-$menuRootParentIconColor: #000000;
-$menuRootParentContentTop: 32px;
-$menuRootParentContentBackgroundColor: #1976d2;
-$menuRootTargetPadding: 10px 15px;
-$menuRootTargetSpanTextColor: #ffffff;
-$menuRootTargetHoverBackgroundColor: rgba(0, 0, 0, 0.1);
-$menuRootTargetParentBorderColor: #d50000;
-
-$tableAndPaginationBorderColor: #000000;
-$tableAndPaginationAlternateBackgroundColor1: #d8d8d8;
-$tableAndPaginationAlternateTextColor1: #000000;
-$tableAndPaginationAlternateBackgroundColor2: #63a4ff;
-$tableAndPaginationAlternateTextColor2: #000000;
-
-$moduleBorderColor: #dee2e6;
-$moduleBackgroundColor: #ececec;
-$moduleTextColor: #000000;
-
-$codeBackgroundColor: #9e9e9e;
-$codeTextColor: #000000;
-
-$consoleBackgroundColor: #000000;
-$consoleTextColor: #ffffff;
-
-$warningTextColor: #ff0000;
-
-$boxShadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-
-$footerHeight: 80px;
 
 @import "helper_custom.scss";
 
