--- a/symfony_fw/templates/render/control_panel/microservice_deploy_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_delete.html.twig
@@ -1,4 +1,4 @@
 <p>{% trans %}microserviceDeployDelete_1{% endtrans %}</p>
-<button id="cp_microservice_deploy_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+<button id="cp_microservice_deploy_delete" class="mdc-button mdc-button--dense mdc-button--raised button_warning" type="button">
     {% trans %}microserviceDeployDelete_2{% endtrans %}
 </button>
