--- a/symfony_fw/templates/render/control_panel/user_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/user_delete.html.twig
@@ -1,4 +1,4 @@
 <p>{% trans %}userDelete_1{% endtrans %}</p>
-<button id="cp_user_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+<button id="cp_user_delete" class="mdc-button mdc-button--dense mdc-button--raised button_warning" type="button">
     {% trans %}userDelete_2{% endtrans %}
 </button>
