--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -9,7 +9,7 @@
                 <a class="material-icons mdc-top-app-bar__navigation-icon menu_root_mobile display_mobile" href="#">menu</a>
                 <div class="display_desktop">
                     <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
-                    <span class="mdc-top-app-bar__title">{{websiteName}}</span>
+                    <svg class="mdc-top-app-bar__title logo_text_main_big"><text class="style" x="4" y="22">{{websiteName}}</text></svg>
                 </div>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
