--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -332,7 +332,7 @@ pre {
 }
 
 .sortable_placeholder {
-    border: 1px dotted $mdc-theme-on-surface;
+    border: 1px dotted $mdc-theme-surface;
 }
 
 .user_login {
@@ -385,11 +385,22 @@ pre {
         height: 29px;
     }
 }
+.icon_svg {
+    margin-left: 0;
+    margin-right: 32px;
+    width: 24px;
+    height: 24px;
+    display: inline-flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
 
 .avatar {
     max-width: 150px;
     max-height: 150px;
-    border: 1px solid $mdc-theme-on-surface;
+    border: 1px solid $mdc-theme-surface;
 }
 
 .square_code {
@@ -658,6 +669,10 @@ pre {
 
 .mdc-chip {
     @include user_select_none();
+
+    &:hover {
+        color: $mdc-theme-on-primary;
+    }
 }
 
 .mdc-chip--selected {
@@ -672,6 +687,13 @@ pre {
 
 .mdc-dialog {
     z-index: 1100;
+}
+.mdc-dialog__surface {
+    .mdc-dialog__header__title {
+        p {
+            margin: 0;
+        }
+    }
 }
 
 .mdc-menu-anchor {
@@ -722,14 +744,6 @@ pre {
     visibility: visible;
 }
 
-.mdc-dialog__surface {
-    .mdc-dialog__header__title {
-        p {
-            margin: 0;
-        }
-    }
-}
-
 .mdc-text-field--textarea {
     .mdc-text-field__input {
         resize: none;
@@ -757,6 +771,15 @@ pre {
 
 .mdc-floating-label_password {
     padding: 0 5px 0 5px;
+}
+
+.mdc-checkbox:after, .mdc-checkbox:before, .mdc-checkbox__background {
+    background-color: $mdc-theme-primary !important;
+    border-color: $mdc-theme-primary !important;
+}
+.mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate)~.mdc-checkbox__background {
+    border-color: rgba(0, 0, 0, 0.54) !important;
+    background-color: transparent !important;
 }
 
 #panel_id_1 {
@@ -834,7 +857,7 @@ pre {
 
 #download_detail_command {
     display: none;
-    border: 1px dotted $mdc-theme-on-surface;
+    border: 1px dotted $mdc-theme-surface;
     padding: 10px;
     width: 50%;
     margin-top: 10px;
@@ -859,7 +882,7 @@ pre {
 
 #setting_language_manage_container {
     display: none;
-    border: 1px dotted $mdc-theme-on-surface;
+    border: 1px dotted $mdc-theme-surface;
     padding: 10px;
     
     &> p {
@@ -895,7 +918,7 @@ pre {
             }
             
             .quote_text {
-                color: $mdc-theme-on-surface;
+                color: $mdc-theme-surface;
             }
         }
         
