--- a/symfony_fw/public/scss/system/wysiwyg.scss
+++ b/symfony_fw/public/scss/system/wysiwyg.scss
@@ -31,7 +31,7 @@
     }
     
     .editor {
-        border: 1px solid $mdc-theme-on-surface;
+        border: 1px solid $mdc-theme-surface;
         width: 100%;
         height: 700px;
         margin-top: 10px;
