--- a/symfony_fw/public/css/system/helper_custom.css
+++ b/symfony_fw/public/css/system/helper_custom.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=helper_custom.css.map */
+@font-face{font-family:"CC overbyte off";font-style:normal;font-weight:400;src:url(../../fonts/rs/cc_overbyte_off_regular.woff2) format("woff2"),url(../../fonts/rs/cc_overbyte_off_regular.woff) format("woff"),url(../../fonts/rs/cc_overbyte_off_regular.ttf) format("truetype")}/*# sourceMappingURL=helper_custom.css.map */
